--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 </head>
 <body>
-    <div class="container">
+    <div class="container-o">
       <div class="tile">
         <div class="tile-thumbnail">
           <img src="http://placehold.it/240x144?text=Spatial+Harmonics" alt="Spatial harmonics">
@@ -86,15 +86,5 @@
       
     </div>
   
-  
-  <script>
-    // tell the embed parent frame the height of the content
-    if (window.parent && window.parent.parent){
-      window.parent.parent.postMessage(["resultsFrame", {
-        height: document.body.getBoundingClientRect().height,
-        slug: "ron1wet8"
-      }], "*")
-    }
-  </script>
 </body>
 </html>
