--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="container-o">
       <div class="tile">
         <div class="tile-thumbnail">
-          <img src="http://placehold.it/240x144?text=Spatial+Harmonics" alt="Spatial harmonics">
+          <img src="canvas.png">
         </div>
         <a class="tile-title" href="spatial-frequency.html">Spatial Harmonics</a>
       </div>
