--- a/spatial-frequency.html
+++ b/spatial-frequency.html
@@ -61,7 +61,7 @@ h3{
     // find elements
 var canvas = $('#canvas')[0];
 var D = 4, // color depth
-    W = canvas.width;
+    W = canvas.width,
     H = canvas.height;
 var val;
 var amp = [1,0,0,0,0, 0,0,0,0 ]
