--- a/medicine/index.html
+++ b/medicine/index.html
@@ -3,6 +3,7 @@
 <head >
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="utf-8" http-equiv="encoding">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     
     <!--[if lt IE 9]>  
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>  
