--- a/index.html
+++ b/index.html
@@ -79,7 +79,13 @@
         <a class="tile-title" href="spatial-frequency.html">Spatial Harmonics</a>
       </div>
       
-      
+      <div class="tile">
+        <div class="tile-thumbnail">
+          <img src="canvas.png">
+        </div>
+        <a class="tile-title" href="ROC.html">Spatial Harmonics</a>
+      </div>
+
     </div>
   
 </body>
