--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       
       <div class="tile">
         <div class="tile-thumbnail">
-          <img src="canvas.png">
+          <img src="roc.png">
         </div>
         <a class="tile-title" href="ROC.html">Spatial Harmonics</a>
       </div>
