--- a/index.html
+++ b/index.html
@@ -86,7 +86,14 @@
         <div class="tile-thumbnail">
           <img src="roc.png">
         </div>
-        <a class="tile-title" href="ROC.html">Spatial Harmonics</a>
+        <a class="tile-title" href="ROC.html">Receiver operating characteristic</a>
+      </div>
+
+      <div class="tile">
+        <div class="tile-thumbnail">
+          <img src="hom/homlogo01.gif">
+        </div>
+        <a class="tile-title" href="hom/index.html">HOM Physiology</a>
       </div>
 
     </div>
