new index for applets

--- a/index.html
+++ b/index.html
@@ -70,10 +70,15 @@
 
   </style>
 
+<!--  import bootstrap  -->
 
 
 </head>
 <body>
+
+    <h1>
+
+    </h1>
     <div class="container-o">
       <div class="tile">
         <div class="tile-thumbnail">
