--- a/index.html
+++ b/index.html
@@ -1,107 +1,55 @@
 <html>
+  <script>
+    $(function(){
+      $("#maincontent").load("home.html"); 
+    });
+  </script>
+  <div id="includedContent"></div>
+
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta http-equiv='cache-control' content='no-cache'> 
   <meta http-equiv='expires' content='0'> 
   <meta http-equiv='pragma' content='no-cache'>
-  <title>Sanjay Manohar's Pages </title>
+  <title> Computational Neurology Lab </title>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-  <meta name="robots" content="noindex, nofollow">
-  <meta name="googlebot" content="noindex, nofollow">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="/css/result-light.css">
 
-  <script
-    type="text/javascript"
-    src="/js/lib/dummy.js"
-    
-  ></script>
-
-    <link rel="stylesheet" type="text/css" href="/css/result-light.css">
-
-      <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-      <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-      <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-      <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
-
-  <style id="compiled-css" type="text/css">
-.tile {
-  -webkit-transform: scale(1);
-          transform: scale(1);
-  position: relative;
-  width: 50%;
-  max-width: 15em;
-  margin: 0.5em;
-}
-
-.tile-thumbnail {
-  position: relative;
-  height: 0;
-  padding-bottom: 60%;
-}
-.tile-thumbnail > img {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-}
-
-.tile-title {
-  display: block;
-  margin: 0.25em;
-  color: #333;
-  font-weight: 700;
-  text-align: center;
-  text-decoration: none;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-.tile-title:before {
-  content: '';
-  z-index: 1;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  display: block;
-  background: rgba(255, 0, 0, 0.25);
-}
-
-  </style>
-
-<!--  import bootstrap  -->
-
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="https://bootswatch.com/4/vapor/bootstrap.min.css">
 
 </head>
-<body>
-
+<script>
+  $(document).ready(function(){
+    $('h1').addClass('text-center');
+    $('.nav li a').click(function(){
+      var page = $(this).attr('href');
+      $('#maincontent').load(page);
+      return false;
+    });
+  });
+</script>
+<body class="bg-light">
+  <div class="container py-5">
     <h1>
-
+      Computational Neurology Lab
     </h1>
-    <div class="container-o">
-      <div class="tile">
-        <div class="tile-thumbnail">
-          <img src="canvas.png">
-        </div>
-        <a class="tile-title" href="spatial-frequency.html">Spatial Harmonics</a>
-      </div>
-      
-      <div class="tile">
-        <div class="tile-thumbnail">
-          <img src="roc.png">
-        </div>
-        <a class="tile-title" href="ROC.html">Receiver operating characteristic</a>
-      </div>
+    <!-- make navbar on the top -->
+    <ul class="navbar navbar-default">
+      <li role="presentation" class="active"><a href="index.html">Home</a></li>
+      <li role="presentation"><a href="research.html">Research</a></li>
+      <li role="presentation"><a href="publications.html">Publications</a></li>
+      <li role="presentation"><a href="team.html">Team</a></li>
+      <li role="presentation"><a href="resources.html">Resources</a></li>
+    </ul>
 
-      <div class="tile">
-        <div class="tile-thumbnail">
-          <img src="hom/homlogo01.gif">
-        </div>
-        <a class="tile-title" href="hom/index.html">HOM Physiology</a>
-      </div>
-
-    </div>
-  
+    <div id="maincontent"></div>
+  </div>
 </body>
 </html>
