publications list change

--- a/home.html
+++ b/home.html
@@ -1,4 +1,12 @@
 <html>
+    <p>
+        Through computational neuroscience, 
+        we try to work out what steps someone takes, 
+        in their brain, when they think or act. 
+        Our research group applies these ideas 
+        to three domains that are affected by neurological illnesses:
+
+    </p>
     <!--  create 3 panels titled "Motivation", "Artificial intelligence" and "Working memory", each one with an image and some text  -->
     <div class="panel panel-default">
       <div class="panel-heading">
@@ -7,7 +15,13 @@
       <div class="panel-body">
         <img src="images/motivation.jpg" class="img-thumbnail" alt="Motivation" style="width: 100%">
         <p>
-          The brain is the most complex organ in the human body. It is the center of the nervous system, which includes the peripheral nervous system, the spinal cord, and the brain. The brain is responsible for processing sensory information, controlling movement, and regulating the body's functions. It is also the seat of consciousness, thought, memory, and emotion. Understanding how the brain works is one of the greatest challenges in science.
+            Motivation drives us to do things.
+             Many brain disorders impair motivation, 
+             causing apathy or impulsivity.
+              This can be catastrophic, leaving patients disabled, 
+              and is of course very stressful for carers. 
+              Understanding the anatomy and chemistry of motivation 
+              may permit treatments of these disorders.
         </p>
       </div>
     </div>
@@ -18,7 +32,15 @@
       <div class="panel-body">
         <img src="images/ai.jpg" class="img-thumbnail" alt="Artificial intelligence" style="width: 100%">
         <p>
-          Artificial intelligence (AI) is the branch of computer science that aims to create machines that can perform tasks that require human intelligence. These tasks include visual perception, speech recognition, decision-making, and language translation. AI is a rapidly evolving field that has the potential to revolutionize many aspects of our lives.
+          Artificial intelligence (AI) studies how thoughts could be
+           made up from simple computations. 
+          AI is a rapidly evolving field and is currently 
+          dominated by neural networks,
+          which use basic arithmetic - like adding and multiplying numbers -
+          to generate complex behaviours.
+          By comparing these networks to the brain,
+           we can understand diseases that produce 
+              abnormal thoughts and behaviours.
         </p>
       </div>
     </div>
@@ -29,7 +51,14 @@
       <div class="panel-body">
         <img src="images/working_memory.jpg" class="img-thumbnail" alt="Working memory" style="width: 100%">
         <p>
-          Working memory is the system that allows us to hold and manipulate information in our minds for short periods of time. It is essential for a wide range of cognitive tasks, including problem-solving, reasoning, and decision-making. Working memory is a key component of human intelligence and is thought to be closely related to general intelligence.
+            Remembering what we have just seen, done, or are about to do,
+             is a natural ability for most of us.
+              However certain diseases can interfere
+               with these kinds of short-term memory.
+                By studying how groups of neurons interact
+                 to retain information over brief intervals,
+                  we may begin to understand how this goes wrong 
+                  in neurodegenerative diseases.     
         </p>  
       </div>
     </div>
