--- a/research.html
+++ b/research.html
@@ -11,10 +11,10 @@
             <p>
             The Computational Neurology Lab studies the brain using computational models. 
             Our research focuses on understanding how the brain processes information, 
-            controls movement, and regulates behavior. He uses a combination of experimental
+            controls movement, and regulates behavior. We uses a combination of experimental
             techniques and mathematical models to investigate the neural mechanisms 
             underlying perception, 
-            cognition, and action. His work has applications in artificial intelligence,
+            cognition, and action. Our work has applications in artificial intelligence,
             robotics, and clinical neuroscience.
             </p>
         </div>
