--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
       Computational Neurology Lab
     </h1>
     <!-- make navbar on the top -->
-    <ul class="navbar navbar-default">
-      <li role="presentation" class="active"><a href="index.html">Home</a></li>
-      <li role="presentation"><a href="research.html">Research</a></li>
-      <li role="presentation"><a href="publications.html">Publications</a></li>
-      <li role="presentation"><a href="team.html">Team</a></li>
-      <li role="presentation"><a href="resources.html">Resources</a></li>
+    <ul class="navbar navbar-expand-lg fixed-top bg-primary">
+      <li class="nav-item active"><a href="index.html">Home</a></li>
+      <li class="nav-item"><a href="research.html">Research</a></li>
+      <li class="nav-item"><a href="publications.html">Publications</a></li>
+      <li class="nav-item"><a href="team.html">Team</a></li>
+      <li class="nav-item"><a href="resources.html">Resources</a></li>
     </ul>
 
     <div id="maincontent"></div>
