--- a/index.html
+++ b/index.html
@@ -1,10 +1,4 @@
 <html>
-  <script>
-    $(function(){
-      $("#maincontent").load("home.html"); 
-    });
-  </script>
-  <div id="includedContent"></div>
 
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -33,23 +27,33 @@
       $('#maincontent').load(page);
       return false;
     });
+    $("#maincontent").load("home.html"); 
   });
+
+
 </script>
 <body class="bg-light">
   <div class="container py-5">
+
     <h1>
       Computational Neurology Lab
     </h1>
-    <!-- make navbar on the top -->
-    <ul class="navbar navbar-expand-lg fixed-top bg-primary">
-      <li class="nav-item active"><a href="index.html">Home</a></li>
-      <li class="nav-item"><a href="research.html">Research</a></li>
-      <li class="nav-item"><a href="publications.html">Publications</a></li>
-      <li class="nav-item"><a href="team.html">Team</a></li>
-      <li class="nav-item"><a href="resources.html">Resources</a></li>
-    </ul>
+
+    <div class="navbar navbar-expand-lg fixed-top bg-primary"></div>
+      <!-- make navbar on the top -->
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav">
+        <li class="nav-item active"><a href="index.html">Home</a></li>
+        <li class="nav-item"><a href="research.html">Research</a></li>
+        <li class="nav-item"><a href="publications.html">Publications</a></li>
+        <li class="nav-item"><a href="team.html">Team</a></li>
+        <li class="nav-item"><a href="resources.html">Resources</a></li>
+        </ul>
+      </div>
+    </div>
 
     <div id="maincontent"></div>
+
   </div>
 </body>
 </html>
