--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
 </head>
 <script>
   $(document).ready(function(){
-    $('h1').addClass('text-center');
-    $('.nav li a').click(function(){
-      var page = $(this).attr('href');
-      $('#maincontent').load(page);
+    $('h1').addClass('text-center');           // center the title
+    $('.nav li a').click(function(){           // when a link is clicked
+      var page = $(this).attr('href');         // get the href attribute
+      $('#maincontent').load(page);            // load the page
+      $('.nav li').removeClass('active');      // make the li  active
+      $(this).parent().addClass('active');
       return false;
     });
     $("#maincontent").load("home.html"); 
@@ -40,15 +42,19 @@
     </h1>
 
     <div class="navbar navbar-expand-lg fixed-top bg-primary"></div>
-      <!-- make navbar on the top -->
-      <div class="collapse navbar-collapse">
-        <ul class="navbar-nav">
-        <li class="nav-item active"><a href="index.html">Home</a></li>
-        <li class="nav-item"><a href="research.html">Research</a></li>
-        <li class="nav-item"><a href="publications.html">Publications</a></li>
-        <li class="nav-item"><a href="team.html">Team</a></li>
-        <li class="nav-item"><a href="resources.html">Resources</a></li>
-        </ul>
+      <div class="container">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div  id="navbarResponsive" class="collapse navbar-collapse">
+          <ul class="navbar-nav">
+          <li class="nav-item active"><a href="index.html">Home</a></li>
+          <li class="nav-item"><a href="research.html">Research</a></li>
+          <li class="nav-item"><a href="publications.html">Publications</a></li>
+          <li class="nav-item"><a href="team.html">Team</a></li>
+          <li class="nav-item"><a href="resources.html">Resources</a></li>
+          </ul>
+        </div>
       </div>
     </div>
 
