fixed div error

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       Computational Neurology Lab
     </h1>
 
-    <div class="navbar navbar-expand-lg fixed-top bg-primary"></div>
+    <div class="navbar navbar-expand-lg fixed-top bg-primary">
       <div class="container">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
