--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!doctype html>
+<html lang="en">
 
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -6,17 +7,16 @@
   <meta http-equiv='expires' content='0'> 
   <meta http-equiv='pragma' content='no-cache'>
   <title> Computational Neurology Lab </title>
-  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <link rel="stylesheet" type="text/css" href="/css/result-light.css">
+  <!--link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" -->
+  <link rel="stylesheet" type="text/css" href="./bootstrap.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script> 
 
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <!--link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"-->
-  <linkn rel="stylesheet" type="text/css" href="./bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 </head>
 <script>
   $(document).ready(function(){
@@ -34,28 +34,67 @@
 
 </script>
 <body class="bg-light">
-  <div class="container py-5">
 
-    <h1>
-      Computational Neurology Lab
-    </h1>
-
-    <div class="navbar navbar-expand-lg fixed-top bg-primary">
-      <div class="container">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div  id="navbarResponsive" class="collapse navbar-collapse">
-          <ul class="navbar-nav">
-          <li class="nav-item active"><a href="index.html">Home</a></li>
-          <li class="nav-item"><a href="research.html">Research</a></li>
-          <li class="nav-item"><a href="publications.html">Publications</a></li>
-          <li class="nav-item"><a href="team.html">Team</a></li>
-          <li class="nav-item"><a href="resources.html">Resources</a></li>
-          </ul>
-        </div>
+  <!--
+  <div class="navbar navbar-expand-lg fixed-top bg-primary" data-bs-theme="dark">
+    <div class="container">
+      <a href="../" class="navbar-brand">Bootswatch</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav">
+        </ul>
+        <ul class="navbar-nav ms-md-auto">
+          <li class="nav-item">
+            <a target="_blank" rel="noopener" class="nav-link" href="https://github.com/thomaspark/bootswatch/"><i class="bi bi-github"></i><span class="d-lg-none ms-2">GitHub</span></a>
+          </li>
+          <li class="nav-item">
+            <a target="_blank" rel="noopener" class="nav-link" href="https://twitter.com/bootswatch"><i class="bi bi-twitter"></i><span class="d-lg-none ms-2">Twitter</span></a>
+          </li>
+          <li class="nav-item py-2 py-lg-1 col-12 col-lg-auto">
+            <div class="vr d-none d-lg-flex h-100 mx-lg-2 text-white"></div>
+            <hr class="d-lg-none my-2 text-white-50">
+          </li>
+          <li class="nav-item dropdown" data-bs-theme="light">
+            <a class="nav-link dropdown-toggle d-flex align-items-center" href="#" id="version-menu" aria-expanded="false" data-bs-toggle="dropdown" data-bs-display="static" aria-label="Toggle theme">
+              <span class="d-lg-none me-2">Bootstrap </span>
+              <span>v5.3</span>
+            </a>
+          </li>
+          <li class="nav-item py-2 py-lg-1 col-12 col-lg-auto">
+            <div class="vr d-none d-lg-flex h-100 mx-lg-2 text-white"></div>
+            <hr class="d-lg-none my-2 text-white-50">
+          </li>
+        </ul>
       </div>
     </div>
+  </div>
+-->
+
+
+
+
+  <div class="navbar navbar-expand-lg fixed-top bg-primary">
+    <div class="container">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="index.html">Computational Neurology Lab</a>
+      </div>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div  id="navbarResponsive" class="collapse navbar-collapse">
+        <ul class="navbar-nav">
+        <li class="nav-item active"><a class='nav-link' href="index.html">Home</a></li>
+        <li class="nav-item"><a class='nav-link' href="research.html">Research</a></li>
+        <li class="nav-item"><a class='nav-link' href="publications.html">Publications</a></li>
+        <li class="nav-item"><a class='nav-link' href="team.html">Team</a></li>
+        <li class="nav-item"><a class='nav-link' href="resources.html">Resources</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="container py-5">
 
     <div id="maincontent"></div>
 
