--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 
 </script>
-<body class="bg-light">
+<body>
 
   <!--
   <div class="navbar navbar-expand-lg fixed-top bg-primary" data-bs-theme="dark">
@@ -75,7 +75,7 @@
 
 
 
-  <div class="navbar navbar-expand-lg fixed-top bg-primary">
+  <div class="navbar navbar-expand-lg fixed-top bg-primary " data-bs-theme="dark">
     <div class="container">
       <div class="navbar-header">
         <a class="navbar-brand" href="index.html">Computational Neurology Lab</a>
