restored posts and images

--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
         Our research group applies these ideas 
         to three domains that are affected by neurological illnesses:
 
+
     </p>
     <!--  create 3 panels titled "Motivation", "Artificial intelligence" and "Working memory", each one with an image and some text  -->
     <div class="panel panel-default">
@@ -12,7 +13,7 @@
         <h3 class="panel-title">Motivation</h3>
       </div>  
       <div class="panel-body">
-        <img src="images/motivation.jpg" class="img-thumbnail" alt="Motivation" style="width: 100%">
+        <img src="images/gambling1.png" class="img-thumbnail" alt="Motivation" style="width: 100%">
         <p>
             Motivation drives us to do things.
              Many brain disorders impair motivation, 
@@ -48,7 +49,7 @@
         <h3 class="panel-title">Working memory</h3>
       </div>
       <div class="panel-body">
-        <img src="images/working_memory.jpg" class="img-thumbnail" alt="Working memory" style="width: 100%">
+        <img src="images/writing.png" class="img-thumbnail" alt="Working memory" style="width: 100%">
         <p>
             Remembering what we have just seen, done, or are about to do,
              is a natural ability for most of us.
