--- a/research.html
+++ b/research.html
@@ -1,11 +1,12 @@
         <!-- create a top-level description of sanjay's research -->
     <div class="panel panel-default">
         <div class="panel-heading">
-            <h3 class="panel-title">Research</h3>
+            <h3 class="panel-title">What is computational neurology?</h3>
         </div>
         <div class="panel-body">
+
             <p>
-            The Computational Neurology Lab studies the brain using computational models. 
+            Our lab studies the brain using computational models. 
             Our research focuses on understanding how the brain processes information, 
             controls movement, and regulates behavior. We uses a combination of experimental
             techniques and mathematical models to investigate the neural mechanisms 
@@ -14,4 +15,65 @@
             robotics, and clinical neuroscience.
             </p>
         </div>
+            
+
+        <div class="panel-heading">
+            <h3 class="panel-title">Understanding disorders of the brain through computational models</h3>
+        </div>
+        <div class="panel-body">
+
+        Computers are able simulate some things that the human brain can do. 
+        For example, through carefully programmed sequences of steps,
+         a computer can hold information, weigh up possible options,
+          and initiate actions. 
+           By <em><strong>likening the brain to a computer</strong></em>, 
+           we can break down thought processes into sequences of simpler steps,
+            which are easier to understand.
+            
+        Through <em><strong>computational neuroscience</strong></em>,
+         we try to work out what steps someone takes, in their brain, 
+         when they think or act. 
+         Our research group applies these ideas to three domains 
+         that are affected by neurological illnesses.
+
+        </div>
+
+        <div class="panel-heading">
+            <h3 class="panel-title">From theory to disorders, and back</h3>
+        </div>
+    <div>
+    We always begin with detailed, quantitative characterisation of a clinical problem. 
+    This is mainly done by analysing how patients perform carefully designed tasks.
+    By manipulating aspects of the task and measuring the effects, 
+    we can track the <strong>computational steps</strong> occurring
+     for different components of cognition.
+     Once we have understood the behavioural changes caused by the condition, 
+     we can ask about which brain areas and brain chemicals are involved:
+     <ul> 	<li>
+         We can test the effects of various drugs on behaviour, 
+         both in healthy volunteers and in patients with neurological illnesses.
+    </li>	<li>
+        Various types of brain imaging
+         (Functional MRI scans, Electroencephalography and Magnetoencephalography)
+          can be used to map how regions of the brain contribute to those computational steps.
+    </li> 	<li>
+        We also study patients who have had damage to the brain 
+        -- for example, after stroke -- 
+        to understand how losing specific brain functions impacts on cognition.
+    </li></ul>
+
+
+
+    Remembering what we have just seen, 
+    done, or are about to do, is a natural ability for most of us.
+     However certain diseases can interfere with these kinds of short-term memory.
+    By studying how groups of neurons interact
+    to retain information over brief intervals,
+    we may begin to understand how this goes wrong in neurodegenerative diseases.
+
+
+    Decision makingA vast amount of research - in both economics and neuroscience - has been directed towards predicting what decisions we will make. According to these theories, the brain stores and manipulates quantities that help us make good decisions. Brain damage can alter our inner representations of these quantities, altering the choices we make.
+    <h4>Our integrative approach</h4>\n<!-- /wp:heading -->\n\n<!-- wp:list -->\n<ul><li>We try to break cognition down into its elementary <strong>computational steps,</strong> asking what quantities the healthy brain must be using</li><li>Then we try to understand how these steps map on to brain areas and chemicals, e.g. using brain <strong>imaging </strong>(fMRI, EEG and MEG)</li><li>Next we study how<strong> neurological diseases</strong>, such as stroke or dementia, can disrupt cognition. This needs detailed, quantitative characterisation of the clinical problem by studying how patients perform carefully designed tasks.</li><li>Finally, we ask whether <strong>medications</strong> can modify cognition. We are particularly interested in the motivational effects of dopamine and acetylcholine. </li></ul>
+    </div>
+
     </div>    
