--- a/home.html
+++ b/home.html
@@ -1,3 +1,7 @@
+
+    <h2>
+        Home
+    </h3>
     <p>
         Through computational neuroscience, 
         we try to work out what steps someone takes, 
@@ -13,7 +17,7 @@
         <h3 class="panel-title">Motivation</h3>
       </div>  
       <div class="panel-body">
-        <img src="images/gambling1.png" class="img-thumbnail" alt="Motivation" style="width: 100%">
+        <img src="images/gambling1.png" class="rounded float-start"  alt="Motivation" style="width: 100%">
         <p>
             Motivation drives us to do things.
              Many brain disorders impair motivation, 
@@ -30,7 +34,7 @@
         <h3 class="panel-title">Artificial intelligence</h3>
       </div>
       <div class="panel-body">
-        <img src="images/ai.jpg" class="img-thumbnail" alt="Artificial intelligence" style="width: 100%">
+        <img src="images/qkv.jpg" class="rounded float-start"  alt="Artificial intelligence" style="width: 100%">
         <p>
           Artificial intelligence (AI) studies how thoughts could be
            made up from simple computations. 
@@ -49,7 +53,7 @@
         <h3 class="panel-title">Working memory</h3>
       </div>
       <div class="panel-body">
-        <img src="images/writing.png" class="img-thumbnail" alt="Working memory" style="width: 100%">
+        <img src="images/writing.png" class="rounded float-start"  alt="Working memory" style="width: 100%">
         <p>
             Remembering what we have just seen, done, or are about to do,
              is a natural ability for most of us.
@@ -62,4 +66,3 @@
         </p>  
       </div>
     </div>
-  </div>
