--- a/home.html
+++ b/home.html
@@ -34,7 +34,7 @@
         <h3 class="panel-title">Artificial intelligence</h3>
       </div>
       <div class="panel-body">
-        <img src="images/qkv.jpg" class="rounded float-start"  alt="Artificial intelligence" style="width: 100%">
+        <img src="images/qkv.png" class="rounded float-start"  alt="Artificial intelligence" style="width: 100%">
         <p>
           Artificial intelligence (AI) studies how thoughts could be
            made up from simple computations. 
