--- a/home.html
+++ b/home.html
@@ -12,12 +12,9 @@
 
     </p>
     <!--  create 3 panels titled "Motivation", "Artificial intelligence" and "Working memory", each one with an image and some text  -->
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h3 class="panel-title">Motivation</h3>
-      </div>  
-      <div class="panel-body">
-        <img src="images/gambling1.png" class="rounded float-start"  alt="Motivation" style="width: 100%">
+    <div class="pic-and-text">
+        <h3>Motivation</h3>
+        <img src="images/gambling1.png"   alt="Motivation">
         <p>
             Motivation drives us to do things.
              Many brain disorders impair motivation, 
@@ -27,14 +24,10 @@
               Understanding the anatomy and chemistry of motivation 
               may permit treatments of these disorders.
         </p>
-      </div>
     </div>
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h3 class="panel-title">Artificial intelligence</h3>
-      </div>
-      <div class="panel-body">
-        <img src="images/qkv.png" class="rounded float-start"  alt="Artificial intelligence" style="width: 100%">
+    <div class="pic-and-text">
+        <h3>Artificial intelligence</h3>
+        <img src="images/blackboard.png"  alt="Artificial intelligence" >
         <p>
           Artificial intelligence (AI) studies how thoughts could be
            made up from simple computations. 
@@ -46,14 +39,10 @@
            we can understand diseases that produce 
               abnormal thoughts and behaviours.
         </p>
-      </div>
     </div>
-    <div class="panel panel-default">
-      <div class="panel-heading">
+    <div class="pic-and-text">
         <h3 class="panel-title">Working memory</h3>
-      </div>
-      <div class="panel-body">
-        <img src="images/writing.png" class="rounded float-start"  alt="Working memory" style="width: 100%">
+        <img src="images/writing.png"   alt="Working memory">
         <p>
             Remembering what we have just seen, done, or are about to do,
              is a natural ability for most of us.
