--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
 <script>
   applyclasses = function(){
-    $(".pic-and-text").addClass("card");       // format cards
+    $(".pic-and-text").addClass("card w-50 bg-primary");       // format cards
     $(".pic-and-text img").addClass("card-img-top");
     $(".pic-and-text h3").addClass("card-title");
-    $(".pic-and-text p").addClass("card-text");
+    $(".pic-and-text p").addClass("card-body");
 
     $(".posts li").addClass("card");           // format posts
     $(".posts li img").addClass("card-img-top");
