--- a/home.html
+++ b/home.html
@@ -1,43 +1,44 @@
 
-    <h2>
-        Home
-    </h3>
-    <p>
-        Through computational neuroscience, 
-        we try to work out what steps someone takes, 
-        in their brain, when they think or act. 
-        Our research group applies these ideas 
-        to three domains that are affected by neurological illnesses:
+<h2>
+    Home
+</h3>
+<p>
+    Through computational neuroscience, 
+    we try to work out what steps someone takes, 
+    in their brain, when they think or act. 
+    Our research group applies these ideas 
+    to three domains that are affected by neurological illnesses:
 
 
-    </p>
-    <!--  create 3 panels titled "Motivation", "Artificial intelligence" and "Working memory", each one with an image and some text  -->
+</p>
+
+<div class="card-group">
     <div class="pic-and-text">
         <h3>Motivation</h3>
         <img src="images/gambling1.png"   alt="Motivation">
         <p>
             Motivation drives us to do things.
-             Many brain disorders impair motivation, 
-             causing apathy or impulsivity.
-              This can be catastrophic, leaving patients disabled, 
-              and is of course very stressful for carers. 
-              Understanding the anatomy and chemistry of motivation 
-              may permit treatments of these disorders.
+            Many brain disorders impair motivation, 
+            causing apathy or impulsivity.
+            This can be catastrophic, leaving patients disabled, 
+            and is of course very stressful for carers. 
+            Understanding the anatomy and chemistry of motivation 
+            may permit treatments of these disorders.
         </p>
     </div>
     <div class="pic-and-text">
         <h3>Artificial intelligence</h3>
         <img src="images/blackboard.png"  alt="Artificial intelligence" >
         <p>
-          Artificial intelligence (AI) studies how thoughts could be
-           made up from simple computations. 
-          AI is a rapidly evolving field and is currently 
-          dominated by neural networks,
-          which use basic arithmetic - like adding and multiplying numbers -
-          to generate complex behaviours.
-          By comparing these networks to the brain,
-           we can understand diseases that produce 
-              abnormal thoughts and behaviours.
+        Artificial intelligence (AI) studies how thoughts could be
+        made up from simple computations. 
+        AI is a rapidly evolving field and is currently 
+        dominated by neural networks,
+        which use basic arithmetic - like adding and multiplying numbers -
+        to generate complex behaviours.
+        By comparing these networks to the brain,
+        we can understand diseases that produce 
+            abnormal thoughts and behaviours.
         </p>
     </div>
     <div class="pic-and-text">
@@ -45,13 +46,14 @@
         <img src="images/writing.png"   alt="Working memory">
         <p>
             Remembering what we have just seen, done, or are about to do,
-             is a natural ability for most of us.
-              However certain diseases can interfere
-               with these kinds of short-term memory.
+            is a natural ability for most of us.
+            However certain diseases can interfere
+            with these kinds of short-term memory.
                 By studying how groups of neurons interact
-                 to retain information over brief intervals,
-                  we may begin to understand how this goes wrong 
-                  in neurodegenerative diseases.     
+                to retain information over brief intervals,
+                we may begin to understand how this goes wrong 
+                in neurodegenerative diseases.     
         </p>  
-      </div>
     </div>
+</div>
+
