--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <script>
   applyclasses = function(){
-    $(".pic-and-text").addClass("card w-25 mx-2 bg-primary");       // format cards
+    $(".pic-and-text").addClass("card w-25 mx-2 mt-2 bg-primary");       // format cards
     $(".pic-and-text img").addClass("card-img-top");
     $(".pic-and-text h3").addClass("card-title");
     $(".pic-and-text p").addClass("card-body");
