--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   };
   $(document).ready(function(){
     $('h1').addClass('text-center');           // center the title
-    $('.nav li a').click(function(event){           // when a link is clicked
+    $('.navbar-nav li a').click(function(event){           // when a link is clicked
       var page = $(this).attr('href');         // get the href attribute
       $('#maincontent').load(page, applyclasses);            // load the page
       $('.nav li').removeClass('active');      // make the li  active
