--- a/home.html
+++ b/home.html
@@ -12,8 +12,8 @@
 
 </p>
 
-<div class="row g-3">
-    <div class="col-12 col-md-6 col-lg-4">
+<div class="d-inline-flex">
+    <!--div class="col-12 col-md-6 col-lg-4"-->
         <div class="pic-and-text">
             <h3>Motivation</h3>
             <img src="images/gambling1.png"   alt="Motivation">
@@ -56,6 +56,6 @@
                     in neurodegenerative diseases.     
             </p>  
         </div>
-    </div>
+    <!--/div-->
 </div>
 
