--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
 
 </p>
 
-<div class="d-inline-flex">
+<div class="d-inline-flex justify-content-between flex-wrap">
     <!--div class="col-12 col-md-6 col-lg-4"-->
         <div class="pic-and-text">
             <h3>Motivation</h3>
