--- a/home.html
+++ b/home.html
@@ -12,9 +12,9 @@
 
 </p>
 
-<div class="d-inline-flex justify-content-between flex-wrap">
+<div class="cards">
     <!--div class="col-12 col-md-6 col-lg-4"-->
-        <div class="pic-and-text">
+        <div >
             <h3>Motivation</h3>
             <img src="images/gambling1.png"   alt="Motivation">
             <p>
@@ -27,7 +27,7 @@
                 may permit treatments of these disorders.
             </p>
         </div>
-        <div class="pic-and-text">
+        <div >
             <h3>Artificial intelligence</h3>
             <img src="images/blackboard.png"  alt="Artificial intelligence" >
             <p>
@@ -42,7 +42,7 @@
                 abnormal thoughts and behaviours.
             </p>
         </div>
-        <div class="pic-and-text">
+        <div >
             <h3 class="panel-title">Working memory</h3>
             <img src="images/writing.png"   alt="Working memory">
             <p>
