--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     $(".posts li p").addClass("card-text");
 
     $(".cards").addClass("d-inline-flex justify-content-between flex-wrap")
-    $(".cards > div").addClass("card mx-2 mt-2 ");       // format cards
+    $(".cards > div").addClass("card mx-2 mt-2 col-12 col-6-md col-4-lg");       // format cards
     $(".card > img").addClass("card-img-top");    
     $(".card > h3").addClass("card-title");
     $(".card > p").addClass("card-body");
