--- a/publications.html
+++ b/publications.html
@@ -11,10 +11,10 @@
             });
         });
     </script>
-    <h2 class="panel-title">Lab publications</h2>
+    <h2>Lab publications</h2>
     <div class="cards">
       <div>
-        <img src="images/qtq50-kmV2ej.jpeg" class="img-thumbnail" alt="Motivation" style="width: 100%">
+        <img src="images/qtq50-kmV2ej.jpeg">
         <h3>
             <a href="https://scholar.google.co.uk/citations?user=4wCwjAIAAAAJ">
             Google Scholar
@@ -35,7 +35,7 @@
       </div>
     </div>
 
-    
+
 <ul class="posts">
 <li>
     <img src="images/van_nuland_for_website.png">
