made team cards

--- a/team.html
+++ b/team.html
@@ -1,83 +1,72 @@
     <!-- create a list of people who have been in the lab -->
-    <div class="panel panel-default">
-    <div class="panel-heading">
-        <h3 class="panel-title">Team</h3>
-    </div>
-    <div class="panel-body">
-        <ul>
-        <li>
-            <h4>Sanjay Manohar</h4>
+    <h2>Team</h>
+    <div class="cards">
+        <div>
+            <h3>Sanjay Manohar</h3>
             <ul>
                 <li><a href=>University page</a></li>
             </ul>
-        </li>
-        <li>
-            <h4>Sam Recht</h4>
-            Postdoc
-        </li>
-        <li>
-            <h4>Giulio Mastria</h4>
-            Neurologist / postdoctoral visiting fellow
-        </li>
-        <li>
-            <h4>Eda Mizrak</h4>
-            Postdoctoral Marie Curie fellow 
-        </li>
-        <li>
-            <h4>Thomas Parr</h4>
-            Neurologist / postdoctoral clinical academic fellow
-        </li>
-        <li>
-            <h4>Xin You Tai</h4>
-            Postdoc / Neurology trainee
-        </li>
-        <li>
-            <h4>Sun Lin</h4>
-            Clinical trainee
-        </li>
-        </ul>
-    </div>
-    </div>
-    <div class="panel panel-default">
-        <div class="panel-heading">
-        <h3 class="panel-title">Alumni</h3>
+
         </div>
-        <div class="panel-body">
-        <ul class="list-group">
-            <li>
-            <h4>Stephanie Hirschbichler</h4>
+        <div>
+            <h3>Sam Recht</h3>
+            Postdoc
+        </div>
+        <div>
+            <h3>Eda Mizrak</h3>
+            Postdoctoral Marie Curie fellow 
+        </div>
+        <div>
+            <h3>Thomas Parr</h3>
+            Neurologist / postdoctoral clinical academic fellow
+        </div>
+        <div>
+            <h3>Xin You Tai</h3>
+            Postdoc / Neurology trainee
+        </div>
+        <div>
+            <h3>Sun Lin</h3>
+            Clinical trainee
+        </div>
+        <div>
+            <h3>Giulio Mastria</h3>
+            Neurologist / postdoctoral visiting fellow
+        </div>
+    </div>
+    <h2 class="panel-title">Alumni</h2>
+    <div class="cards">
+        <div>
+            <h3>Stephanie Hirschbichler</h3>
             Clinician scientist in Vienna, Austria
-            </li>
-            <li>
-            <h4>Younes Tabi</h4>
+        </div>
+            <div>
+            <h3>Younes Tabi</h3>
             Clinician Scientist in Kiel, Germany
-            </li>
-            <li>
-            <h4>John Grogan</h4>
+            </div>
+            <div>
+            <h3>John Grogan</h3>
             Postdoctoral researcher in Dublin, Ireland
-            </li>
-            <li>
-            <h4>Kinan Muhammed</h4>
+            </div>
+            <div>
+            <h3>Kinan Muhammed</h3>
             Neurologist postdoctoral and co-founder of Neu Health
-            </li>
-            <li>
-            <h4>Tim Sandhu</h4>
+            </div>
+            <div>
+            <h3>Tim Sandhu</h3>
             PhD student in Cambridge
-            </li>
-            <li>
-            <h4>Afrose Dor</h4>
+            </div>
+            <div>
+            <h3>Afrose Dor</h3>
                 Clinical trainee
-            </li>
-            <li>
-            <h4>Max Doody</h4>
+            </div>
+            <div>
+            <h3>Max Doody</h3>
                 Clinical trainee
-            </li>
-            <li>
-                <h4> Maaike van Swieten </h4>
+            </div>
+            <div>
+                <h3> Maaike van Swieten </h3>
                 Postdoc
-            </li>
-        
-        </ul>
+            </div>
         </div>
     </div>
     <div class="panel panel-default">
