--- a/index.html
+++ b/index.html
@@ -21,16 +21,7 @@
 
 <script>
   applyclasses = function(){
-    // $(".pic-and-text").addClass("card mx-2 mt-2 ");       // format cards
-    // $(".pic-and-text img").addClass("card-img-top");
-    // $(".pic-and-text h3").addClass("card-title");
-    // $(".pic-and-text p").addClass("card-body");
-
-    // $(".posts li").addClass("card");           // format posts
-    // $(".posts li img").addClass("card-img-top");
-    // $(".posts li h3").addClass("card-title");
-    // $(".posts li p").addClass("card-text");
-
+    console.log('applying classes')
     $(".cards").addClass("d-inline-flex justify-content-between flex-wrap")
     $(".cards > div").addClass("card col-12 col-md-6 col-lg-4");       // format cards
     $(".card > img").addClass("card-img-top");    
@@ -52,47 +43,7 @@
 </script>
 
 <body>
-
-  <!--
-  <div class="navbar navbar-expand-lg fixed-top bg-primary" data-bs-theme="dark">
-    <div class="container">
-      <a href="../" class="navbar-brand">Bootswatch</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav">
-        </ul>
-        <ul class="navbar-nav ms-md-auto">
-          <li class="nav-item">
-            <a target="_blank" rel="noopener" class="nav-link" href="https://github.com/thomaspark/bootswatch/"><i class="bi bi-github"></i><span class="d-lg-none ms-2">GitHub</span></a>
-          </li>
-          <li class="nav-item">
-            <a target="_blank" rel="noopener" class="nav-link" href="https://twitter.com/bootswatch"><i class="bi bi-twitter"></i><span class="d-lg-none ms-2">Twitter</span></a>
-          </li>
-          <li class="nav-item py-2 py-lg-1 col-12 col-lg-auto">
-            <div class="vr d-none d-lg-flex h-100 mx-lg-2 text-white"></div>
-            <hr class="d-lg-none my-2 text-white-50">
-          </li>
-          <li class="nav-item dropdown" data-bs-theme="light">
-            <a class="nav-link dropdown-toggle d-flex align-items-center" href="#" id="version-menu" aria-expanded="false" data-bs-toggle="dropdown" data-bs-display="static" aria-label="Toggle theme">
-              <span class="d-lg-none me-2">Bootstrap </span>
-              <span>v5.3</span>
-            </a>
-          </li>
-          <li class="nav-item py-2 py-lg-1 col-12 col-lg-auto">
-            <div class="vr d-none d-lg-flex h-100 mx-lg-2 text-white"></div>
-            <hr class="d-lg-none my-2 text-white-50">
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
--->
-
-
-
-
+  
   <div class="navbar navbar-expand-lg fixed-top bg-primary " data-bs-theme="dark">
     <div class="container">
       <div class="navbar-header">
