--- a/team.html
+++ b/team.html
@@ -1,36 +1,42 @@
     <!-- create a list of people who have been in the lab -->
-    <h2>Team</h>
+    <h2>Team</h2>
     <div class="cards">
         <div>
             <h3>Sanjay Manohar</h3>
             <ul>
-                <li><a href=>University page</a></li>
+                <li><a href="https://www.ndcn.ox.ac.uk/team/sanjay-manohar">University page</a></li>
+                <li><a href="https://www.neuroscience.ox.ac.uk/about/conversations-with-our-researchers/sanjay-manohar">
+                    Conversation</a></li>
+                <li><a href="http://www.smanohar.com">External</a></li>
+                <li><a href="https://twitter.com/braininthemind">Twitter</a></li>
+                <li><a href="https://www.linkedin.com/in/sgmanohar/">LinkedIn</a></li>
+                <li><a href="https://github.com/sgmanohar">Github</a></li>
             </ul>
 
         </div>
         <div>
             <h3>Sam Recht</h3>
-            Postdoc
+            <p>Postdoc</p>
         </div>
         <div>
             <h3>Eda Mizrak</h3>
-            Postdoctoral Marie Curie fellow 
+            <p>Postdoctoral Marie Curie fellow </p>
         </div>
         <div>
             <h3>Thomas Parr</h3>
-            Neurologist / postdoctoral clinical academic fellow
+            <p>Neurologist / postdoctoral clinical academic fellow</p>
         </div>
         <div>
             <h3>Xin You Tai</h3>
-            Postdoc / Neurology trainee
+            <p>Postdoc / Neurology trainee</p>
         </div>
         <div>
             <h3>Sun Lin</h3>
-            Clinical trainee
+            <p>Clinical trainee</p>
         </div>
         <div>
             <h3>Giulio Mastria</h3>
-            Neurologist / postdoctoral visiting fellow
+            <p>Neurologist / postdoctoral visiting fellow</p>
         </div>
     </div>
     <h2 class="panel-title">Alumni</h2>
