--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     $(".cards").addClass("d-inline-flex justify-content-between flex-wrap")
     $(".cards > div").addClass("card col-12 col-md-6 col-lg-4");       // format cards
     $(".card > img").addClass("card-img-top");    
-    $(".card > h3").addClass("card-title p2");
+    $(".card > h3").addClass("card-header p2");
     $(".card > p").addClass("card-body");
   };
   $(document).ready(function(){
