--- a/publications.html
+++ b/publications.html
@@ -13,6 +13,7 @@
         </p>
       </div>
       <div>
+        <img src="images/qtq50-kmV2ej_.jpeg">
         <h3>
           <a href="https://pubmed.ncbi.nlm.nih.gov/?term=manohar+sg+%5Bauthor%5D&sort=pubdate">
              PubMed
