--- a/publications.html
+++ b/publications.html
@@ -25,7 +25,7 @@
     </div>
 
 
-<ul class="posts">
+<ul class="cards">
 <li>
     <h3>Drugs affect subtypes of Parkinson's disease differently</h3>
     <img src="images/van_nuland_for_website.png">
